<resources>
    <string name="app_name">Navigation View Demo</string>

    <string name="navigation_item_1">item1</string>
    <string name="navigation_item_2">item2</string>
    <string name="navigation_item_3">item3</string>
    <string name="navigation_item_4">item4</string>
    <string name="navigation_item_5">item5</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="text_dismiss">Dismiss</string>

</resources>
